# miden-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  eslint.config.js  miden-client.toml  miden-workshop.sh  mkdocs.yml  package.json  repro_db.sqlite3  requirements.txt  run_integration_test.sh  rustc-ice-2024-02-01T19_25_57-1720.txt  rustc-ice-2024-02-01T19_25_57-1721.txt  rustfmt.toml
crates/node-builder/: Cargo.toml  README.md
crates/node-builder/examples/: simple.rs
crates/node-builder/src/: lib.rs  main.rs
crates/remote-tx-prover/: Cargo.toml  README.md
crates/remote-tx-prover/src/: lib.rs
crates/rust-client/: Cargo.toml  README.md  build.rs
crates/rust-client/src/: account.rs  accounts.rs  authenticator.rs  builder.rs  config.rs  errors.rs  lib.rs  mock.rs  note_screener.rs  notes.rs  store_authenticator.rs  sync.rs  tests.rs  tonic_mock.rs
crates/rust-client/src/account/: mod.rs  procedure_roots.rs
crates/rust-client/src/authenticator/: client_authenticator.rs  mod.rs  web_authenticator.rs
crates/rust-client/src/client/: accounts.rs
crates/rust-client/src/components/: mod.rs  sync_state.rs
crates/rust-client/src/keystore/: fs_keystore.rs  mod.rs  web_keystore.rs
crates/rust-client/src/note/: import.rs  mod.rs  note_screener.rs  note_update_tracker.rs  note_updates.rs  script_roots.rs
crates/rust-client/src/notes/: import.rs  mod.rs  note_screener.rs  notes.rs  script_roots.rs
crates/rust-client/src/rpc/: endpoint.rs  errors.rs  mod.rs
crates/rust-client/src/store/: account.rs  account_record.rs  authenticator.rs  data_store.rs  errors.rs  mod.rs
crates/rust-client/src/sync/: block_header.rs  block_headers.rs  mod.rs  state_sync.rs  state_sync_update.rs  sync.rs  tag.rs  tags.rs
crates/rust-client/src/test_utils/: common.rs  mock.rs  mod.rs
crates/rust-client/src/transaction/: mod.rs  script_builder.rs
crates/rust-client/src/transactions/: mod.rs  request.rs  script_builder.rs  transaction_args_builder.rs  transaction_request.rs  transaction_script_builder.rs
crates/web-client/: .mocharc.json  Cargo.toml  README.md  clean.js  package-lock.json  package.json  rollup.config.js  test.html  tsconfig.docs.json  tsconfig.json  typedoc.json
crates/web-client/docs/classes/: Account.md  AccountCode.md  AccountDelta.md  AccountHeader.md  AccountId.md  AccountStorage.md  AccountStorageMode.md  AdviceInputs.md  AdviceMap.md  AssetVault.md  AuthSecretKey.md  BlockHeader.md  ConsumableNoteRecord.md  ExecutedTransaction.md  Felt.md  FeltArray.md  FungibleAsset.md  InputNote.md  InputNoteRecord.md  InputNotes.md  IntoUnderlyingByteSource.md  IntoUnderlyingSink.md  IntoUnderlyingSource.md  MerklePath.md  NewSwapTransactionResult.md  Note.md  NoteAndArgs.md  NoteAndArgsArray.md  NoteAssets.md  NoteConsumability.md  NoteDetails.md  NoteDetailsAndTag.md  NoteDetailsAndTagArray.md  NoteDetailsArray.md  NoteExecutionHint.md  NoteExecutionMode.md  NoteFilter.md  NoteHeader.md  NoteId.md  NoteIdAndArgs.md  (+32 more)
crates/web-client/docs/enumerations/: InputNoteState.md  NoteFilterTypes.md
crates/web-client/docs/type-aliases/: ReadableStreamType.md
crates/web-client/js/: constants.js  index.js  wasm.js
crates/web-client/js/types/: index.d.ts
crates/web-client/js/workers/: web-client-methods-worker.js
crates/web-client/src/: account.rs  export.rs  helpers.rs  import.rs  keystore.rs  lib.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  tags.rs  transactions.rs
crates/web-client/src/models/: account.rs  account_builder.rs  account_code.rs  account_component.rs  account_delta.rs  account_header.rs  account_id.rs  account_id_anchor.rs  account_storage.rs  account_storage_mode.rs  account_type.rs  accounts.rs  advice_inputs.rs  advice_map.rs  assembler.rs  asset_vault.rs  auth_secret_key.rs  block_header.rs  consumable_note_record.rs  executed_transaction.rs  felt.rs  fungible_asset.rs  input_note.rs  input_note_record.rs  input_note_state.rs  input_notes.rs  library.rs  merkle_path.rs  mod.rs  note.rs  note_assets.rs  note_details.rs  note_execution_hint.rs  note_execution_mode.rs  note_filter.rs  note_header.rs  (+32 more)
crates/web-client/test/: README.md  account.test.ts  faucet.test.ts  global.test.d.ts  import.test.ts  import_export.test.ts  mocha.global.setup.mjs  new_account.test.ts  new_transactions.test.ts  notes.test.ts  tags.test.ts  transactions.test.ts  wallet.test.ts  webClientTestUtils.js  webClientTestUtils.ts
miden-cli/: Cargo.toml
miden-cli/src/cli/: import.rs  new_account.rs  tags.rs  utils.rs
miden-client/: Cargo.toml
miden-client/src/: lib.rs  mock.rs  tests.rs
miden-client/src/client/: accounts.rs  errors.rs  mod.rs  note_screener.rs  notes.rs  sync.rs
miden-client/src/store/: data_store.rs  errors.rs  mod.rs
miden-wasm/: Cargo.toml  build.rs  package.json  rollup.config.js  test.html
miden-wasm/js/: index.js  wasm.js
miden-wasm/js/db/: sync.js
miden-wasm/js/types/: index.d.ts
miden-wasm/src/: lib.rs
miden-wasm/src/web_client/: export.rs  import.rs  mod.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  transactions.rs
tests/: Cargo.toml  README.md  run_integration_test.sh
tests/config/: genesis.toml  miden-client-rpc.toml  miden-client.toml  miden-node.toml
tests/integration/: cli_tests.rs  common.rs  custom_transactions_tests.rs  fpi_tests.rs  lib.rs  main.rs  onchain_tests.rs  swap_transactions_tests.rs
tests/integration/asm/: custom_p2id.masm
wasm/: Cargo.toml  build.rs  miden-client.toml  package.json  rollup.config.js  test.html
wasm/config/: envoy.yaml
wasm/js/: db-operations.js  index.js  wasm.js  web-rpc-client.js
wasm/js/db/: accounts.js  chainData.js  greet.js  notes.js  schema.js  sync.js  transactions.js
wasm/src/: lib.rs
wasm/src/native_code/: accounts.rs  chain_data.rs  errors.rs  mod.rs  note_screener.rs  notes.rs  sync.rs  transactions.rs  utils.rs
wasm/src/web_client/: account.rs  examples.rs  mod.rs  notes.rs  sync.rs  transactions.rs  web_rpc_client.rs
wasm/test_accounts/: account0.mac  account1.mac
(+530 files in other folders)
