[workspace]
resolver = "2"

members = ["bin/miden-cli", "crates/rust-client", "crates/web-client", "tests"]

default-members = ["crates/rust-client", "bin/miden-cli"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["miden contributors"]
repository = "https://github.com/0xPolygonMiden/miden-client"

[workspace.dependencies]
async-trait = "0.1"
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", default-features = false, features = ["async"] }
miden-tx-prover = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "next", features = ["async"] }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
tracing = { version = "0.1" }
