[workspace]
resolver = "2"

members = [
    "bin/miden-cli",
    "crates/rust-client",
    "crates/web-client",
    "tests"
]

default-members = ["crates/rust-client", "bin/miden-cli"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["miden contributors"]
repository = "https://github.com/0xPolygonMiden/miden-client"

[workspace.dependencies]
async-trait = "0.1"
miden-lib = { version = "0.7", default-features = false }
miden-objects = {  version = "0.7.2", default-features = false }
miden-tx = {  version = "0.7", default-features = false, features = ["async"] }
miden-proving-service-client = { version = "0.7", default-features = false, features = ["tx-prover"] }
miette = { version = "7.2", features = ["fancy"] }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
tracing = { version = "0.1" }
