[package]
name = "miden-cli"
version = "0.3.1"
description = "CLI binary application that facilitates interaction with the Miden rollup"
readme = "README.md"
# TODO: change this
documentation = "https://docs.rs/miden-client/0.3.1"
keywords = ["miden", "client"]
default-run = "miden"
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "miden"
path = "src/main.rs"

[features]
default = []

[dependencies]
clap = { version = "4.3", features = ["derive"] }
comfy-table = { version = "7.1.0" } 
figment = { version = "0.10", features = ["toml", "env"] }
miden-client = { path = "../miden-client", features = ["sqlite", "tonic", "testing", "concurrent"] }
miden-tx = { package = "miden-tx", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false }
miden-objects = { package = "miden-objects", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false, features = ["serde"] }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { workspace = true }
tonic = { version = "0.11" }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
