[package]
name = "miden-client"
version = "0.3.1"
description = "Client library that facilitates interaction with the Miden rollup"
readme = "README.md"
documentation = "https://docs.rs/miden-client/0.3.1"
keywords = ["miden", "client"]
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

# [[test]]
# name = "integration"
# path = "tests/integration/main.rs"
# required-features = ["integration"]

[features]
async = ["miden-tx/async"]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-tx/concurrent", "std"]
default = ["std", "dep:hex", "dep:thiserror", "dep:prost"]
executable = ["std", "sqlite", "tonic", "dep:tokio"]
integration = ["concurrent", "executable", "testing"]
sqlite = ["dep:rusqlite", "dep:rusqlite_migration", "dep:lazy_static"]
std = ["miden-objects/std"]
testing = ["miden-objects/testing", "miden-lib/testing"]
tonic = ["dep:tonic", "dep:miden-node-proto"]

[dependencies]
hex = { version = "0.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
miden-lib = { package = "miden-lib", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false }
miden-node-proto = { package = "miden-node-proto", git = "https://github.com/0xPolygonMiden/miden-node.git", branch = "next", default-features = false, optional = true }
miden-tx = { package = "miden-tx", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false }
miden-objects = { package = "miden-objects", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false, features = ["serde"] }
prost = { version = "0.12.3", optional = true }
rand = { workspace = true }
rusqlite = { version = "0.30.0", features = ["vtab", "array", "bundled"], optional = true }
rusqlite_migration = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { workspace = true, optional = true }
tonic = { version = "0.11", optional = true }
thiserror = { version = "1.0", optional = true }
tracing = { version = "0.1" }
winter-maybe-async = "0.10.0"

[target.'wasm32-unknown-unknown'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# To enable testing feature during tests
miden-client = { path = ".", features = ["sqlite", "tonic", "testing", "concurrent"] }
miden-lib = { package = "miden-lib", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false, features = ["testing"] }
miden-objects = { package = "miden-objects", git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "next", default-features = false, features = ["serde", "testing"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
