[package]
name = "miden-client-tests"
version = "0.6.0"
description = "Integration Tests for the miden client library and CLI"
readme = "README.md"
publish = false
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
async-trait = { version = "0.1" }
miden-client = { path = "../crates/rust-client", features = [
    "concurrent",
    "testing",
    "std",
    "sqlite",
    "tonic",
] }
miden-objects = { workspace = true, default-features = false, features = ["testing"] }
miden-lib = { workspace = true, default-features = false, features = ["testing"] }
rand = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.10", features = ["serde", "v4"] }
winter-maybe-async = { version = "0.10" }

[[test]]
name = "integration"
path = "integration/main.rs"
