[package]
name = "miden-client-tests"
version = "0.8.0"
description = "Integration Tests for the miden client library and CLI"
readme = "README.md"
publish = false
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
miden-client = { path = "../crates/rust-client", features = [
    "concurrent",
    "testing",
    "std",
    "sqlite",
    "tonic",
] }
miden-objects = { workspace = true, default-features = false, features = ["testing"] }
rand = { workspace = true }
toml = { version = "0.8" }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
async-trait = { version = "0.1" }
miden-lib = { workspace = true, default-features = false, features = ["testing"] }
tokio = { workspace = true }
winter-maybe-async = { version = "0.11", features = ["async"]}

[[test]]
name = "integration"
path = "integration/main.rs"

[lib]
path = "integration/lib.rs"
