[package]
name = "miden-client"
version = "0.9.0"
description = "Client library that facilitates interaction with the Miden rollup"
readme = "README.md"
documentation = "https://docs.rs/miden-client/0.9.0"
categories = ["no-std"]
keywords = ["miden", "client"]
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[lints]
workspace = true

[features]
concurrent = ["miden-tx/concurrent", "std"]
default = ["std", "tonic/channel"]
idxdb = ["dep:base64", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:serde", "dep:getrandom"]
sqlite = ["dep:rusqlite", "dep:deadpool-sqlite", "std"]
std = ["miden-objects/std","miden-proving-service-client/std"]
testing = ["miden-objects/testing", "miden-lib/testing", "miden-tx/testing"]
tonic = ["std", "tonic/transport", "tonic/tls-ring", "tonic/tls-native-roots"]
web-tonic = ["dep:tonic-web-wasm-client", "dep:getrandom"]

[dependencies]
async-trait = { workspace = true }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", optional = false }
deadpool-sqlite = { version = "0.10", features = ["rt_tokio_1"], optional = true }
hex = { version = "0.4" }
miden-proving-service-client = { workspace = true , features = ["tx-prover"]}
miden-lib = { workspace = true }
miden-objects = { workspace = true }
miden-tx = { workspace = true, features = ["async"] }
prost = { version = "0.13", default-features = false, features = ["derive"] }
rand = { workspace = true }
rusqlite = { version = "0.33", features = ["vtab", "array", "bundled"], optional = true }
serde = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = { workspace = true }
tonic = { version = "0.13", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = { version = "0.7", optional = true, default-features = false }
tracing = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }

[dev-dependencies]
miden-client = { path = ".", features = ["testing", "concurrent", "sqlite", "tonic"] }
miden-lib = { workspace = true, features = ["testing"] }
miden-objects = { workspace = true, default-features = false, features = ["testing"] }
tokio = { workspace = true }
uuid = { version = "1.10", features = ["serde", "v4"] }
web-sys = { version = "0.3", features = ["console"]}

[build-dependencies]
miden-node-proto-build = { git = "https://github.com/0xPolygonMiden/miden-node", branch = "next", default-features = false }
miden-lib = { workspace = true }
miden-objects = { workspace = true }
miette = { workspace = true }
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-build = { version = "0.13", default-features = false }
protox = { version = "0.7" }
tonic-build = { version = "0.13" }
