[package]
name = "miden-client-web"
version = "0.5.0"
description = "Web Client library that facilitates interaction with the Miden rollup"
readme = "README.md"
categories = ["no-std"]
keywords = ["miden", "client", "web", "wasm"]
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
miden-client = { path = "../rust-client", version = "0.5", default-features = false, features = ["idxdb", "web-tonic", "testing"] }
miden-lib = { workspace = true }
miden-objects = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }

[dev-dependencies]
miden-client = { path = "../rust-client", default-features = false, features = ["idxdb", "web-tonic", "testing"] }
miden-lib = { workspace = true, default-features = false, features = ["testing"] }
miden-objects = { workspace = true, default-features = false, features = ["testing"] }
web-sys = { version = "0.3", features = ["console"]} 
console_error_panic_hook = "0.1.6"
