[package]
name = "miden-client-web"
version = "0.6.0"
description = "Web Client library that facilitates interaction with the Miden rollup"
readme = "README.md"
categories = ["no-std"]
documentation = "https://docs.rs/miden-client-web/0.6.0"
keywords = ["miden", "client", "web", "wasm"]
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing", "miden-tx-prover/testing"]

[dependencies]
miden-client = { version = "0.6", path = "../rust-client", default-features = false, features = ["idxdb", "web-tonic"] }
miden-lib = { workspace = true }
miden-objects = { workspace = true }
miden-tx-prover = { git = "https://github.com/0xPolygonMiden/miden-base", branch = "tomyrd-error-send", default-features = false, features = ["async"] }
rand = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = "0.1"

[dev-dependencies]
miden-client = { path = "../rust-client", default-features = false, features = ["idxdb", "web-tonic", "testing"] }
miden-lib = { workspace = true, default-features = false, features = ["testing"] }
miden-objects = { workspace = true, default-features = false, features = ["testing"] }
web-sys = { version = "0.3", features = ["console"]}
